fixed widescreen responsive issues - still need to work on alignment as screen resizes down

--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -11,9 +11,10 @@ html {
   -moz-font-feature-settings: "liga" on;
   color: rgba(0,0,0,0.8);
   font-size: 18px;
-  max-width: 1199px;
+  max-width: 1400px;
   margin: 0 auto;
   background-color: grey;
+  border: 1px solid rgba(255,133,0,1) !important;
 }
 
 *, *:before, *:after {
@@ -51,7 +52,7 @@ nav {
 	height: 8%;
 	background-color: #333 !important;
 	opacity: 0.9;
-	max-width: 1199px;
+	max-width: 1400px;
 	margin: 0 auto;
 }
 
@@ -143,7 +144,7 @@ iframe.smaller-video {
 	float: left;
 	width: 350px;
 	height: 200px;
-	margin-left: 1.25em;
+	margin-left: 3em;
 	margin-bottom: .5em;
 }
 
